--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,18 @@
-
+{
+  "name": "心流存摺",
+  "short_name": "心流存摺",
+  "description": "記錄成長與情緒的個人日誌",
+  "start_url": "/flow-journal.html",
+  "display": "standalone",
+  "background_color": "#F5F3F0",
+  "theme_color": "#F5F3F0",
+  "orientation": "portrait",
+  "icons": [
+    {
+      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'><rect fill='%233A3632' width='512' height='512'/><text x='256' y='340' font-size='280' text-anchor='middle' fill='%23F5F3F0' font-family='serif'>心</text></svg>",
+      "sizes": "512x512",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
+    }
+  ]
+}
